--- a/public/index.html
+++ b/public/index.html
@@ -24,4 +24,5 @@
     <div id="root"></div>
   </body>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface:wght@400&family=Raleway:wght@400;700;900&display=swap" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159215687-2"></script>
 </html>
