--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Little Eagle Photography - Event & People Photographer</title>
+    <title>Little Eagle Photography</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Ana Orlic is photographer from Zagreb, Croatia. Available worldwide." />
-     
-    <meta name="msapplication-TileColor" content="#da532c"/>
     <meta name="theme-color" content="#ffffff"/>    
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="msapplication-TileColor" content="#da532c"/>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="canonical" href="https://littleeaglephoto.com"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
-    <link rel="manifest" href="/site.webmanifest"/>
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="canonical" href="https://littleeaglephoto.com"/>
   </head>
   <body>
     <div id="root"></div>
@@ -28,7 +24,7 @@
 
 <!-- <meta name="keywords" content="littleeaglephotography, littleeagle photography, little eagle photography, littleeaglephoto, littleeagle photo, little eagle photo, 
       wedding photographer, photographer, fotograf, portret, fotograf vjencanja, fotograf vjenčanja, croatian wedding photographer, wedding in croatia, vjencanje, vjenčanje, vjencanja, vjenčanja, zagreb, hrvatska">
-
+      <meta name="description" content="Ana Orlic is photographer from Zagreb, Croatia. Available worldwide." />
       <meta property="og:site_name" content="Little Eagle Photography - Event & People Photographer"/>
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Little Eagle Photography - Event & People Photographer"/>
