--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159215687-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159215687-2');
+    </script>
     <title>Little Eagle Photography</title>
     <meta charset="utf-8" />
     <meta name="theme-color" content="#ffffff"/>    
@@ -22,7 +31,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"/>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159215687-2"></script>
   </head>
   <body>
     <div id="root"></div>
