--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="og:type" content="website" />
     <meta name="og:title" content="Little Eagle Photography"/>
     <meta name="og:url" content="https://www.littleeaglephoto.com"/>
-    <meta name="og:image" content="https://littleeagle.s3.eu-central-1.amazonaws.com/gallery/low/people/img79.jpg" />
+    <meta name="og:image" content="https://littleeagle.s3.eu-central-1.amazonaws.com/social.jpg" />
     <meta name="og:image:width" content="320" />
     <meta name="og:image:height" content="213" />
     <meta name="og:image:alt" content="Red high heels" />
