--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
     <meta name="og:type" content="website" />
     <meta name="og:title" content="Little Eagle Photography"/>
     <meta name="og:url" content="https://www.littleeaglephoto.com"/>
-    <meta name="og:image" content="https://littleeagle.s3.eu-central-1.amazonaws.com/social.jpg" />
+    <meta name="og:image" content="https://littleeagle.s3.eu-central-1.amazonaws.com/og-photo.jpg" />
     <meta name="og:image:width" content="320" />
-    <meta name="og:image:height" content="213" />
-    <meta name="og:image:alt" content="Red high heels" />
-    <meta name="og:description" content="Ana Orlic is event and people photographer from Zagreb, Croatia. Available worldwide." />
+    <meta name="og:image:height" content="274" />
+    <meta name="og:image:alt" content="Passionate wedding couple love kiss" />
+    <meta name="og:description" content="Ana Orlic is an event and portrait photographer from Zagreb, Croatia. Available worldwide." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="canonical" href="https://littleeaglephoto.com"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
